--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,92 +1,104 @@
-<div class="flex bg-linearBG2 w-[100vw] h-[100vh] justify-center items-center flex-col relative"
-    (keyup.enter)="login()">
-    <div
-        class="absolute top-10 right-10 rounded-[50%] size-[25px] text-[12px] cursor-pointer border-[#1C274C] border bg-[#FFF] flex justify-center items-center">
-        <span *ngIf="language==='vi'" (click)="changeLanguage('en')" class="select-none">VN</span>
-        <span *ngIf="language==='en'" (click)="changeLanguage('vi')" class="select-none">EN</span>
+<div class="flex bg-gradient-to-br from-teal-50 to-blue-50 w-[100vw] h-[100vh] justify-center items-center flex-col relative">
+    <!-- Language Toggle - Improved Design -->
+    <div class="absolute top-6 right-6 bg-white rounded-full shadow-lg border border-primary p-2 hover:shadow-xl transition-all">
+        <span *ngIf="language==='vi'" (click)="changeLanguage('en')" class="px-2 font-medium cursor-pointer">VN</span>
+        <span *ngIf="language==='en'" (click)="changeLanguage('vi')" class="px-2 font-medium cursor-pointer">EN</span>
     </div>
+    
     <div class="flex h-full w-full">
-        <div class="w-[40%] h-full flex items-center justify-center">
-            <img class="w-[400px] h-[400px] object-cover rounded-[50%] shadow-2xl"  src="../../../assets/img/Hanu.jpeg"/>
+        <!-- Left Side - Logo Area -->
+        <div class="w-[40%] h-full flex items-center justify-center bg-gradient-to-br from-teal-500/10 to-blue-500/10">
+            <img class="w-[300px] h-[300px] object-cover rounded-full shadow-2xl hover:scale-105 transition-all duration-500 border-4 border-white" src="../../../assets/img/Hanu.jpeg"/>
         </div>
-        <div class="grid flex-1 lg:w-[700px] grid-cols-1">
-            <div class="flex justify-center items-center flex-col">
-                <div
-                    class="bg-white shadow-2xl lg:w-[700px] border-[3px] border-[rgba(131,_166,_211,_0.64)] rounded-[20px] flex flex-col justify-center items-center p-5 py-10">
-                    <form [formGroup]="formLogin" class="flex flex-col gap-7 w-[80%]">
-                        <div class="w-full text-center">
-                            <div class="w-full [text-shadow:_0_1px_0_rgb(0_0_0_/_40%)] uppercase text-center text-primary text-[30px] font-semibold">
-                                {{'Login.login'|translate}}
-                            </div>
-                            <div class="w-full text-center text-[#888] text-[16px] font-normal">
-                                {{'Login.text'|translate}}
-                            </div>
-                        </div>
-                        <div class="flex flex-col">
-                            <label for="userName" class="w-52">{{'Login.username'|translate}}</label>
-                            <mat-form-field class="custom-input" appearance="outline">
-                                <input formControlName="userName" name="userName" matInput
-                                    placeholder="{{'Login.userNamePlaceholder'|translate}}" />
-                                <mat-error>{{'Login.noEmty'|translate}}</mat-error>
-                            </mat-form-field>
-                        </div>
-                        <div class="flex flex-col relative">
-                            <label for="password" class="w-52">{{'Login.password'|translate}}</label>
-                            <mat-form-field class="custom-input relative" appearance="outline">
-                                <input formControlName="password" name="password" matInput type="password"
-                                    autocomplete="off" id="inputPass" placeholder="*********" />
-                                <i *ngIf="hide" class="fas fa-eye absolute right-0 top-[50%] translate-y-[-50%]"
-                                    (click)="showPass($event)"></i>
-                                <i *ngIf="!hide" class="fa-solid fa-eye-slash absolute right-0 top-[50%] translate-y-[-50%]"
-                                    (click)="showPass($event)"></i>
-                                <mat-error>{{'Login.noEmty'|translate}}</mat-error>
-                            </mat-form-field>
-                            <a (click)="handleOpenPopUpForgotPassWord()"
-                                class="absolute right-0 bottom-0">{{'Login.forgotPass'|translate}}</a>
-    
-                        </div>
-                    </form>
-                    <div class="flex gap-5 justify-center">
-    
-                        <button nz-button nzType="primary" [nzLoading]="isLoading"
-                            class="bg-primary text-white w-[120px] rounded-[5px] h-[30px] hover:opacity-50 hover:bg-primary hover:border-none"
-                            (click)="login()">{{'Login.login'|translate}}</button>
-                    </div>
-                    <div class="flex flex-col gap-y-5 mt-4 text-[16px] font-[500] text-[#1C274C]">
-                        <div class="flex flex-col gap-2 items-center">
-                            <span>{{'Login.loginWith'|translate}}</span>
-                            <div class="flex gap-2">
-                                <a><img src="../../../assets/img/googleLogo.svg" class="size-[20px] object-cover" /></a>
-                                <a *ngIf="!loggedIn" (click)="signInWithFB()"><img src="../../../assets/img/faceBookLogo.svg" class="size-[20px] object-cover" /></a>
-                                <!-- <a (click)="loginWithTrueAccount()"><img src="../../../assets/img/logoNoText.png"
-                                        class="size-[22.5px] object-cover" /></a> -->
-                            </div>
-                        </div>
-                        <!-- <a (click)="handleOpenPopUpRegister()">{{'Login.registerAccount'|translate}}</a> -->
-    
-                    </div>
+        
+        <!-- Right Side - Login Form -->
+        <div class="grid flex-1 place-items-center">
+            <div class="bg-white shadow-2xl rounded-2xl border-[3px] border-primary/20 w-[90%] max-w-[550px] p-8 hover:shadow-xl transition-all duration-300">
+                <!-- Logo for Mobile (Hidden on desktop) -->
+                <div class="lg:hidden flex justify-center mb-6">
+                    <img class="w-[100px] h-[100px] object-cover rounded-full border-2 border-primary" src="../../../assets/img/Hanu.jpeg"/>
                 </div>
-    
+                
+                <!-- Form Header -->
+                <div class="text-center mb-8">
+                    <h2 class="text-primary text-3xl font-bold mb-2 uppercase tracking-wide">{{'Login.login'|translate}}</h2>
+                    <p class="text-gray-500">{{'Login.text'|translate}}</p>
+                </div>
+                
+                <form [formGroup]="formLogin" class="flex flex-col gap-6">
+                    <!-- Username Field -->
+                    <div class="flex flex-col">
+                        <label for="userName" class="font-medium text-gray-700 mb-2">{{'Login.username'|translate}}</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400">
+                                <i class="fas fa-user"></i>
+                            </span>
+                            <input formControlName="userName" name="userName" 
+                                class="w-full bg-gray-50 border border-gray-200 rounded-lg py-3 px-10 focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all" 
+                                placeholder="{{'Login.userNamePlaceholder'|translate}}" />
+                        </div>
+                        <div *ngIf="formLogin.get('userName')?.errors?.['required'] && formLogin.get('userName')?.touched" 
+                            class="text-red-500 text-sm mt-1">
+                            {{'Login.noEmty'|translate}}
+                        </div>
+                    </div>
+                    
+                    <!-- Password Field -->
+                    <div class="flex flex-col relative">
+                        <label for="password" class="font-medium text-gray-700 mb-2">{{'Login.password'|translate}}</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                            <input formControlName="password" name="password" 
+                                class="w-full bg-gray-50 border border-gray-200 rounded-lg py-3 px-10 focus:ring-2 focus:ring-primary focus:border-primary outline-none transition-all" 
+                                type="password" autocomplete="off" id="inputPass" placeholder="*********" />
+                            <button type="button" class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 hover:text-primary" (click)="showPass($event)">
+                                <i *ngIf="hide" class="fas fa-eye"></i>
+                                <i *ngIf="!hide" class="fa-solid fa-eye-slash"></i>
+                            </button>
+                        </div>
+                        <div *ngIf="formLogin.get('password')?.errors?.['required'] && formLogin.get('password')?.touched" 
+                            class="text-red-500 text-sm mt-1">
+                            {{'Login.noEmty'|translate}}
+                        </div>
+                        <a (click)="handleOpenPopUpForgotPassWord()" class="self-end text-primary text-sm hover:underline mt-2">{{'Login.forgotPass'|translate}}</a>
+                    </div>
+                    
+                    <!-- Login Button -->
+                    <button type="button" 
+                        class="bg-primary text-white font-medium py-3 rounded-lg shadow-lg hover:bg-primary-dark transition-all hover:shadow-xl active:scale-95 mt-4"
+                        [class.opacity-70]="isLoading"
+                        [disabled]="isLoading" 
+                        (click)="login()">
+                        <span *ngIf="!isLoading">{{'Login.login'|translate}}</span>
+                        <span *ngIf="isLoading" class="flex items-center justify-center gap-2">
+                            <i class="fas fa-circle-notch fa-spin"></i> {{'Login.loggingIn'|translate}}
+                        </span>
+                    </button>
+                    
+                    <!-- Social Login -->
+                    <div class="mt-6">
+                        <div class="relative text-center mb-6">
+                            <div class="absolute inset-0 flex items-center">
+                                <div class="w-full border-t border-gray-200"></div>
+                            </div>
+                            <div class="relative">
+                                <span class="px-4 bg-white text-sm text-gray-500">{{'Login.loginWith'|translate}}</span>
+                            </div>
+                        </div>
+                        
+                        <div class="flex justify-center gap-6">
+                            <button type="button" class="flex items-center justify-center w-12 h-12 bg-gray-50 rounded-full hover:bg-gray-100 transition-all shadow hover:shadow-md">
+                                <img src="../../../assets/img/googleLogo.svg" class="w-6 h-6 object-contain" />
+                            </button>
+                            <button *ngIf="!loggedIn" (click)="signInWithFB()" class="flex items-center justify-center w-12 h-12 bg-gray-50 rounded-full hover:bg-gray-100 transition-all shadow hover:shadow-md">
+                                <img src="../../../assets/img/faceBookLogo.svg" class="w-6 h-6 object-contain" />
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
-    
         </div>
     </div>
-
-
 </div>
-<app-register *ngIf="isVisibleRegister" [isVisiblePopUpRegister]="isVisibleRegister"
-    (isVisiblePopUpOpen)="handleShowRegisterPopUp($event)"></app-register>
-
-<app-forgot-pass-word *ngIf="isVisibleForgotPassWord" [isVisiblePopUpForgotPassWord]="isVisibleForgotPassWord"
-    (isVisiblePopUpOpen)="handleShowForgotPassWordPopUp($event)"></app-forgot-pass-word>
-
-<app-pop-up-check-email *ngIf="isVisibleCheckEmail" [isVisiblePopUpCheckEmail]="isVisibleCheckEmail"
-(isVisiblePopUpOpen)="handleShowCheckEmail($event)"></app-pop-up-check-email>
-
-<app-pop-up-check-phone *ngIf="isVisibleCheckPhone" [isVisiblePopUpCheckPhone]="isVisibleCheckPhone"
-(isVisiblePopUpOpen)="handleShowCheckPhone($event)"></app-pop-up-check-phone>
-
-<app-pop-up-insert-otp *ngIf="isVisibleInsertOTP" [isVisiblePopUpInsertOTP]="isVisibleInsertOTP"
-    (isVisiblePopUpOpen)="handleShowInsertOTPPopUp($event)"></app-pop-up-insert-otp>
-<app-pop-up-change-pass *ngIf="isVisibleChangePass" [isVisiblePopUpChangePass]="isVisibleChangePass"
-    (isVisiblePopUpOpen)="handleShowChangePassPopUp($event)"></app-pop-up-change-pass>
