--- a/src/app/features/management/management-list/account-disable/account-disable.component.html
+++ b/src/app/features/management/management-list/account-disable/account-disable.component.html
@@ -1,24 +1,62 @@
-<nz-modal nzWidth="400px" [(nzVisible)]="isVisible" nzCentered [nzContent]="modalContent"
-    [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()" class="rounded-xl">
+<nz-modal 
+  nzWidth="450px" 
+  [(nzVisible)]="isVisible" 
+  nzCentered 
+  [nzContent]="modalContent"
+  [nzFooter]="modalFooter" 
+  (nzOnCancel)="handleCancel()" 
+  class="disable-account-modal">
 
-    <ng-template #modalContent>
-        <div class="text-center">
-            <div class="flex justify-center items-center gap-2">
-              <i class="fas fa-exclamation-triangle text-2xl text-[#FFA500]"></i>
-              <span class="text-[20px] font-semibold">Xác nhận</span>
-            </div>
-            <div class="text-[#6B7280] text-[16px] mt-2">Bạn có chắc chắn muốn vô hiệu hoá tài khoản <span class="text-myRed">{{nameManagement}}</span> không?</div>
+  <ng-template #modalContent>
+    <div class="text-center py-6">
+      <!-- Warning Icon -->
+      <div class="mx-auto mb-6 relative">
+        <div class="w-20 h-20 bg-red-100 rounded-full flex items-center justify-center">
+          <i class="fas fa-user-slash text-red-500 text-3xl"></i>
         </div>
-    </ng-template>
+        <div class="absolute -bottom-2 -right-1 w-8 h-8 flex items-center justify-center bg-red-500 text-white rounded-full shadow-lg">
+          <i class="fas fa-exclamation"></i>
+        </div>
+      </div>
+      
+      <!-- Title & Message -->
+      <h3 class="text-xl font-semibold text-gray-800 mb-2">Xác nhận</h3>
+      <p class="text-gray-600 mb-6">
+        Bạn có chắc chắn muốn vô hiệu hoá tài khoản 
+        <span class="font-medium text-red-600">{{nameManagement}}</span> không?
+      </p>
+      
+      <!-- Warning Info -->
+      <div class="bg-yellow-50 border border-yellow-100 rounded-lg p-3 mb-4 text-left">
+        <div class="flex">
+          <div class="flex-shrink-0">
+            <i class="fas fa-exclamation-triangle text-yellow-400"></i>
+          </div>
+          <div class="ml-3">
+            <p class="text-sm text-yellow-700">
+              Khi vô hiệu hoá, người dùng sẽ không thể đăng nhập hoặc sử dụng hệ thống cho đến khi được kích hoạt lại.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
 
-    <ng-template #modalFooter>
-        <div class="flex justify-center gap-9">
-            <button class="px-5 py-2 bg-[#969696] text-[#fff] font-medium rounded-lg" nz-button nzType="default" (click)="handleCancel()">Hủy</button>
-            <button nz-button nzType="primary"
-            class="!bg-myRed px-5 py-2 text-[#fff] font-medium rounded-lg"
-            (click)="handleOk()">Xác nhận</button>
-        </div>
-    </ng-template>
+  <ng-template #modalFooter>
+    <div class="flex justify-center space-x-4 pb-2">
+      <button 
+        class="px-4 py-2 bg-gray-100 text-gray-700 font-medium rounded-lg hover:bg-gray-200 transition-colors flex items-center" 
+        (click)="handleCancel()">
+        <i class="fas fa-times mr-2"></i>
+        <span>Huỷ</span>
+      </button>
+      
+      <button 
+        class="px-4 py-2 bg-red-500 text-white font-medium rounded-lg hover:bg-red-600 transition-colors flex items-center shadow-md hover:shadow-lg" 
+        (click)="handleOk()">
+        <i class="fas fa-check mr-2"></i>
+        <span>Xác nhận</span>
+      </button>
+    </div>
+  </ng-template>
 </nz-modal>
-
-
